added Clock component, testing, and styles.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,4 @@
 // leave off underscore and file extension
 @import "base/variables";
 @import "components/navigation";
+@import 'components/clock';
